# MCTS-Gobang

./: .gitignore  CMakeLists.txt  Chess.cpp  Chess.h  Game.cpp  Game.h  MainWindow.cpp  MainWindow.h  MyChessWidget.cpp  MyChessWidget.h  Node.cpp  Node.h  README.md  State.cpp  State.h  Widget.ui  main.cpp  resource.h  roll.cu  roll.cuh  stack.h  ui_Widget.h
cuda/: roll.cu
include/: Chess.h  Game.h  MainWindow.h  MyChessWidget.h  Node.h  State.h  roll.cuh  stack.h  stack_arr.h
source/: Chess.cpp  Game.cpp  MainWindow.cpp  MyChessWidget.cpp  Node.cpp  State.cpp  main.cpp
ui/: Widget.ui
